feat: add routes

--- a/src/client/Style/style.scss
+++ b/src/client/Style/style.scss
@@ -1,3 +1,14 @@
-.test{
-    color: green;
+.test {
+  color: green;
+}
+header {
+  height: 10vh;
+}
+
+footer {
+  height: 10vh;
+}
+
+.main_wrapper {
+  height: 80vh;
 }
