feat: add styles and add auth context

--- a/src/client/Style/layouts/_header.scss
+++ b/src/client/Style/layouts/_header.scss
@@ -1,3 +1,8 @@
 header {
   height: 10vh;
+  background-color: $footer-background;
+  width: 100%;
+  padding: 1rem 1rem;
+  display: flex;
+  justify-content: space-between;
 }
