--- a/src/client/Style/base/_base.scss
+++ b/src/client/Style/base/_base.scss
@@ -1,3 +1,9 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  max-width: 1200px;
+  margin: 0 auto;
+  background-color: aqua;
 }
