feat: add cards pictres and functionality

--- a/src/client/Style/style.scss
+++ b/src/client/Style/style.scss
@@ -18,6 +18,10 @@ $slick-loader-path: '~slick-carousel/slick/';
 
 @import 'components/galery';
 @import 'components/lanSelector';
+@import 'components/card';
+
+
 .main_wrapper {
+
   position: relative;
 }
