--- a/src/client/Style/style.scss
+++ b/src/client/Style/style.scss
@@ -19,6 +19,7 @@ $slick-loader-path: '~slick-carousel/slick/';
 @import 'components/galery';
 @import 'components/lanSelector';
 @import 'components/card';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,700;1,900&display=swap');
 
 
 .main_wrapper {
