--- a/src/client/Style/components/_card.scss
+++ b/src/client/Style/components/_card.scss
@@ -1,5 +1,5 @@
 .main_wrapper {
-  height: 90vh;
+  height: 96vh;
 }
 .country-list {
   height: 100%;
@@ -18,29 +18,10 @@
       transform: scale(1.02);
       box-shadow: 0px 0px 20px black;
     }
-    //.country-description{
-    //  position: absolute;
-    //  display: flex;
-    //  width: 100%;
-    //  flex-direction: column;
-    //  background: rgba(223, 226, 233, 0.47);
-    //  span{
-    //    font-size: 30px;
-    //    font-weight: bold;
-    //    line-height: 130%;
-    //    letter-spacing: 0.06em;
-    //    color: white;
-    //    font-family: "Roboto Light";
-    //    margin-left: 10px;
-    //  }
-    //}
-
     img{
       width: 100%;
       height: 100%;
       border-radius: 5px;
-
-      //transform: scale(1.02);
     }
   }
 }
@@ -56,7 +37,7 @@
     line-height: 130%;
     letter-spacing: 0.06em;
     color: white;
-    font-family: "Roboto Light";
+    font-family: Roboto;
     margin-left: 10px;
   }
 }
@@ -64,4 +45,8 @@
 .hover-picture {
   grid-area: p;
   display: flex;
+  img{
+    width: 100%;
+    height: 516px;
+  }
 }
