feat: add search component

--- a/src/client/Style/layouts/_header.scss
+++ b/src/client/Style/layouts/_header.scss
@@ -1,6 +1,6 @@
 header {
   height: 450px;
-  background-color: #73AFBA;;
+  background-color: #73afba;;
   width: 100%;
   padding: 1rem 1rem;
   display: flex;
@@ -37,6 +37,25 @@ header {
       line-height: 130%;
       letter-spacing: 0.06em;
       margin-left: 110px;
+    }
+    .form-group{
+      display: flex;
+      position: absolute;
+      right: 15px;
+      bottom: 30px;
+      input {
+        margin-right: 10px;
+      }
+    }
+    .search-btn {
+      background: url("http://127.0.0.1:3333/assets/search-24px.svg");
+      height: 50px;
+      width: 60px;
+      background-size: 50px 50px;
+      background-repeat: no-repeat;
+      background-color: #dc3545;
+      margin: 0;
+      padding: 0;
     }
   }
   a {
