--- a/src/client/Style/abstract/_constants.scss
+++ b/src/client/Style/abstract/_constants.scss
@@ -1,1 +1,2 @@
 $footer-background: rgb(245, 81, 81);
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,700;1,900&display=swap');
