--- a/src/client/Style/style.scss
+++ b/src/client/Style/style.scss
@@ -19,10 +19,9 @@ $slick-loader-path: '~slick-carousel/slick/';
 @import 'components/galery';
 @import 'components/lanSelector';
 @import 'components/card';
+@import 'components/widgets';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,700;1,900&display=swap');
 
-
 .main_wrapper {
-
   position: relative;
 }
