feat: add sryles for home page

--- a/src/client/Style/style.scss
+++ b/src/client/Style/style.scss
@@ -9,7 +9,7 @@ $slick-loader-path: '~slick-carousel/slick/';
 //Base
 
 @import 'base/base';
-// @import 'base/logo';
+ @import 'base/logo';
 //Layouts
 @import 'layouts/header';
 @import 'layouts/footer';
