--- a/src/client/Style/components/_card.scss
+++ b/src/client/Style/components/_card.scss
@@ -1,5 +1,5 @@
 .main_wrapper {
- 
+  height: 78vh;
 }
 .country-list {
   height: 100%;
@@ -14,13 +14,15 @@
   .country-item{
     position: relative;
     margin: 10px 0;
+    height: fit-content;
+    border-radius: 10px;
     &:hover{
       transform: scale(1.02);
       box-shadow: 0px 0px 20px black;
     }
     img{
       width: 100%;
-      height: 100%;
+      //height: 100%;
       border-radius: 5px;
     }
   }
