--- a/src/client/Style/components/_logOut.scss
+++ b/src/client/Style/components/_logOut.scss
@@ -1,3 +1,26 @@
 .img-out {
   width: 50px;
+  height: 50px;
+  border: solid 3px cyan;
+  cursor: pointer;
+  :hover {
+    transform: scale(1.2);
+  }
+}
+.login-wrapper:hover {
+  transform: scale(1.2);
+}
+
+.menu-logout {
+  p {
+    cursor: pointer;
+  }
+  p:hover {
+    transform: scale(1.1);
+  }
+}
+
+.btn-modal-donwload{
+        width: fit-content;
+    margin-left: 1rem;
 }
