--- a/src/client/Style/base/_base.scss
+++ b/src/client/Style/base/_base.scss
@@ -7,3 +7,7 @@ body {
   margin: 0 auto;
   background-color: white;
 }
+#root{
+  //background: #73afba;
+  background: rgba(115, 175, 186, 0.1);
+}
