--- a/src/client/Style/components/_widgets.scss
+++ b/src/client/Style/components/_widgets.scss
@@ -1,16 +1,32 @@
+@mixin widgetText{
+  font-size: 20px;
+  line-height: 130%;
+  color: #777777;
+  letter-spacing: 0.06em;
+}
 .time-wrapper{
     display: flex;
     flex-direction: column;
+  align-items: center;
 }
 
 .widgets-wrapper {
+  @include widgetText;
     display: flex;
     justify-content: space-between;
+  align-items: center;
+  margin-left: 5%;
+  width: 90%;
+  background-color: rgba(115, 175, 186, 0.3);
+  border-radius: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   }
   
   .weather {
     display: flex;
     justify-content: space-between;
+    margin-right: 15px;
     .weather__container {
       display: flex;
       flex-direction: column;
@@ -25,4 +41,6 @@
       font-size: 14px;
     }
   }
-  
+  .currency {
+    margin-left: 15px;
+  }
