--- a/src/client/Style/style.scss
+++ b/src/client/Style/style.scss
@@ -18,10 +18,11 @@ $slick-loader-path: '~slick-carousel/slick/';
 
 @import 'components/galery';
 @import 'components/lanSelector';
-@import 'components/card';
+@import 'components/country-list';
 @import 'components/widgets';
 @import 'components/logOut';
 @import 'components/raiting';
+@import 'components/about';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,700;1,900&display=swap');
 
 .main_wrapper {
