--- a/src/client/Style/style.scss
+++ b/src/client/Style/style.scss
@@ -21,6 +21,7 @@ $slick-loader-path: '~slick-carousel/slick/';
 @import 'components/card';
 @import 'components/widgets';
 @import 'components/logOut';
+@import 'components/raiting';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,700;1,900&display=swap');
 
 .main_wrapper {
