--- a/src/client/Style/style.scss
+++ b/src/client/Style/style.scss
@@ -1,5 +1,4 @@
 @import '~bootstrap/scss/bootstrap';
-// @import '~bootstrap/scss/carousel';
 $slick-font-path: '~slick-carousel/slick/fonts/';
 $slick-loader-path: '~slick-carousel/slick/';
 @import '~slick-carousel/slick/slick.scss';
@@ -23,7 +22,7 @@ $slick-loader-path: '~slick-carousel/slick/';
 @import 'components/logOut';
 @import 'components/raiting';
 @import 'components/about';
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,400;1,700;1,900&display=swap');
 
 .main_wrapper {
   position: relative;
