--- a/src/client/Style/layouts/_header.scss
+++ b/src/client/Style/layouts/_header.scss
@@ -25,7 +25,7 @@ header {
       right: 97px;
     }
 
-    .login-wrapper {
+    .login-btn-wrapper {
       position: absolute;
       top: 11px;
       right: 26px;
