--- a/src/client/Style/components/_video.scss
+++ b/src/client/Style/components/_video.scss
@@ -10,3 +10,12 @@
     left: 0;
   }
 }
+
+.video-text {
+  font-family: Roboto Condensed;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  line-height: 130%;
+  margin-left: 2rem;
+}
