--- a/src/client/Style/style.scss
+++ b/src/client/Style/style.scss
@@ -28,5 +28,6 @@ $slick-loader-path: '~slick-carousel/slick/';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,400;1,700;1,900&display=swap');
 
 .main_wrapper {
-  position: relative;
+  min-width: 320px;
+  overflow: hidden;
 }
