--- a/src/client/Style/style.scss
+++ b/src/client/Style/style.scss
@@ -25,6 +25,8 @@ $slick-loader-path: '~slick-carousel/slick/';
 @import 'components/about';
 @import 'components/login';
 @import 'components/video';
+@import 'components/loader';
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,400;1,700;1,900&display=swap');
 
 .main_wrapper {
