fix: code cleanup

--- a/src/client/components/MapOnSite/MapCountry.css
+++ b/src/client/components/MapOnSite/MapCountry.css
@@ -17,5 +17,5 @@ height: 500px;
   /* position: relative; */
   /* height: 800px; */
   max-width: 1200px;
-  background-color: blueviolet;
+  /* background-color: blueviolet; */
 }
