fix: resolve conflicts

--- a/src/client/Style/style.scss
+++ b/src/client/Style/style.scss
@@ -15,7 +15,6 @@ $slick-loader-path: '~slick-carousel/slick/';
 @import 'layouts/footer';
 
 //components
-
 @import 'components/galery';
 @import 'components/lanSelector';
 @import 'components/country-list';
@@ -26,8 +25,9 @@ $slick-loader-path: '~slick-carousel/slick/';
 @import 'components/login';
 @import 'components/video';
 @import 'components/loader';
+@import 'components/map';
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,400;1,600;1,700;1,900&display=swap');
 
 .main_wrapper {
   min-width: 320px;
