--- a/src/client/Style/components/_video.scss
+++ b/src/client/Style/components/_video.scss
@@ -12,10 +12,9 @@
 }
 
 .video-text {
-  font-family: Roboto Condensed;
+  @include basicText;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 600;
   font-size: 40px;
-  line-height: 130%;
   margin-left: 2rem;
 }
