--- a/src/client/Style/components/_logOut.scss
+++ b/src/client/Style/components/_logOut.scss
@@ -26,6 +26,7 @@
     margin-left: 1rem;
   }
   .btn-primary {
+    margin-bottom: 10px;
     background-color: $color-base;
     border: none;
     &:hover {
